[gd_scene load_steps=2 format=3 uid="uid://c8y6vxe5xgj8v"]

[ext_resource type="Script" path="res://scenes/test/save_system_test.gd" id="1_yjnvu"]

[node name="SaveSystemTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnvu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "存档系统测试"
horizontal_alignment = 1

[node name="SavePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SavePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SaveSlotList" type="ItemList" parent="SavePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TestDataContainer" type="HBoxContainer" parent="SavePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SavePanel/VBoxContainer/TestDataContainer"]
layout_mode = 2
text = "测试数据:"

[node name="TestDataInput" type="LineEdit" parent="SavePanel/VBoxContainer/TestDataContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入要保存的测试数据"

[node name="ButtonContainer" type="HBoxContainer" parent="SavePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="SavePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存"

[node name="LoadButton" type="Button" parent="SavePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "加载"

[node name="DeleteButton" type="Button" parent="SavePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "删除"

[node name="RefreshButton" type="Button" parent="SavePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "刷新"

[node name="ResultLabel" type="Label" parent="SavePanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "返回"
